# vivre

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-run.sh  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependencies.yml  docs.yml  publish-simple.yml  publish.yml  release.yml  security.yml
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
examples/: basic_usage.py  dependency_injection_demo.py
scripts/: security_check.py
src/vivre/: __init__.py  __main__.py  align.py  api.py  cli.py  parser.py  segmenter.py
tests/: conftest.py  test_align.py  test_aligner_fixes.py  test_api.py  test_api_fixes.py  test_cli.py  test_integration.py  test_main.py  test_parser.py  test_parser_fixes.py  test_segmenter.py  test_segmenter_fixes.py  test_vivre.py
tests/data/: El ladrón del rayo - Rick Riordan.epub  Percy Jackson 1 - The Lightning Thief - Riordan, Rick.epub  Vacaciones al pie de un volcán.epub  Vacation Under the Volcano - Mary Pope Osborne.epub
vivre/: __init__.py
