[tool.poetry]
name = "vivre"
version = "0.1.0"
description = "A Python library for machine learning and corpus linguistics"
authors = ["Aniket Dixit <aniketdixit00.ani@gmail.com>"]
readme = "README.md"
packages = [
    {include = "vivre", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
