[tool.poetry]
name = "vivre"
version = "0.1.0"
description = "A Python library for machine learning and corpus linguistics"
authors = ["Aniket Dixit <aniketdixit00.ani@gmail.com>"]
readme = "README.md"
packages = [
    {include = "vivre", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.32.4"
pytest = "^8.4.1"
ebooklib = "^0.19"
nltk = "^3.9.1"
spacy = "^3.8.7"
numpy = "^2.3.1"
typer = "^0.16.0"
rich = "^14.0.0"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.4"
isort = "^6.0.1"
pre-commit = "^4.2.0"
bandit = "^1.7.5"
safety = "^2.3.5"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
